# ScopeForge

./: README.md  license.md  notes.config.json  pyproject.toml  requirements.txt  scopeforge.json
.archive/: generate_prompt.py  index.md
notes/: 01_project-goals.md
notes/validator/: .rules-in-draft.md  VALIDATOR-PROTOCOL.md  file-structure-guide.md  glossary.md  index.md  instructions-gpt-validator.md  naming-conventions.md  render-contract.md  savepoint-instructions.md  seo-and-semantics.md  site-manifest.yaml  symbolic-constraints.md
notes/validator/fixtures/data-attributes/: bad.html  good.html
notes/validator/fixtures/gpt-instructions/: bad.txt  good.txt
notes/validator/fixtures/jsonld-home/: bad.html  good.html
notes/validator/fixtures/layout-contract/: bad.php  good.php
notes/validator/fixtures/meta-opengraph/: bad.html  good.html
notes/validator/fixtures/naming-conventions/: bad.txt  good.txt
notes/validator/fixtures/router-contract/: bad.php  good.php
notes/validator/fixtures/savepoint-blocks/: bad.txt  good.txt
notes/validator/fixtures/symbolic-violations/: bad.php  good.php
scopeforge/: config.py  main.py  note.py  prompt.py  utils.py
scripts/: migrate_legacy.sh
